--- a/main.html
+++ b/main.html
@@ -1,2 +1,14 @@
-Перепишите по братски, да
-Хуй тебе братан, а не перепись
+<!DOCTYPE html>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="style.css">
+            <link rel="shortcut icon" href="instagram.ico" type="image/x-icon">
+            <title>Instagram</title>
+        </head>
+    <body>
+    
+    </body>
+</html>
