--- a/main.html
+++ b/main.html
@@ -5,10 +5,40 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="style.css">
-            <link rel="shortcut icon" href="instagram.ico" type="image/x-icon">
+            <link rel="icon" href="instagram.ico" type="image/x-icon">
             <title>Instagram</title>
         </head>
     <body>
-    
+
+        <div class="upper_menu">
+            <div class="logo">
+                <img src="src/icon/logo.png" alt="logo">
+            </div>
+            <div class="new_post">
+                <img src="src/icon/post.png" alt="post">
+            </div>
+            <div class="message">
+                <img src="src/icon/message.png" alt="message">
+            </div>  
+        </div>
+
+        <div class="bottom_menu">
+            <div class="home">
+
+            </div>
+            <div class="search">
+
+            </div>
+            <div class="story">
+
+            </div>
+            <div class="activity">
+
+            </div>
+            <div class="profile">
+
+            </div>
+        </div>
+
     </body>
 </html>
