--- a/main.html
+++ b/main.html
@@ -5,40 +5,47 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="style.css">
-            <link rel="icon" href="instagram.ico" type="image/x-icon">
+            <link rel="icon" href="src/icon/instagram.ico" type="image/x-icon">
             <title>Instagram</title>
         </head>
     <body>
 
-        <div class="upper_menu">
-            <div class="logo">
-                <img src="src/icon/logo.png" alt="logo">
-            </div>
-            <div class="new_post">
-                <img src="src/icon/post.png" alt="post">
-            </div>
-            <div class="message">
-                <img src="src/icon/message.png" alt="message">
-            </div>  
-        </div>
 
-        <div class="bottom_menu">
-            <div class="home">
-
+        <header class="header">
+            <div class="upper_menu">
+                <div class="logo">
+                    <img src="src/icon/logo.png" alt="logo">
+                </div>
+                <div class="new_post">
+                    <img src="src/icon/post.png" alt="post">
+                </div>
+                <div class="message">
+                    <img src="src/icon/message.png" alt="message">
+                </div>  
             </div>
-            <div class="search">
+        </header>
 
-            </div>
-            <div class="story">
 
+        <footer class="footer">
+            <div class="bottom_menu">
+                <div class="home">
+                    <img src="src/icon/home.svg" alt="home">
+                </div>
+                <div class="search">
+                    <img src="src/icon/search.svg" alt="search">
+                </div>
+                <div class="story">
+                    <img src="src/icon/" alt="story">
+                </div>
+                <div class="activity">
+                    <img src="src/icon/like.png" alt="activity">
+                </div>
+                <div class="profile">
+                    <img src="src/" alt="profile">
+                </div>
             </div>
-            <div class="activity">
+        </footer>
 
-            </div>
-            <div class="profile">
-
-            </div>
-        </div>
 
     </body>
 </html>
