--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
                     <img src="src/icon/search.svg" alt="search">
                 </div>
                 <div class="story">
-                    <img src="src/icon/" alt="story">
+                    <img src="src/icon/story.svg" alt="story">
                 </div>
                 <div class="activity">
                     <img src="src/icon/like.png" alt="activity">
