--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
         <header class="header">
             <div class="upper_menu">
                 <div class="logo">
-                    <img src="src/icon/logo.png" alt="logo">
+                    <img src="src/icon/logo.svg" alt="logo">
                 </div>
                 <div class="new_post">
                     <img src="src/icon/post.png" alt="post">
