--- a/main.html
+++ b/main.html
@@ -27,21 +27,21 @@
 
 
         <footer class="footer">
-            <div class="bottom_menu">
-                <div class="home">
-                    <img src="src/icon/home.svg" alt="home">
+            <div class="bottom_menu tabs fl fl-jc-sa fl-ai-c">
+                <div class="home fl fl-jc-c fl-ai-c">
+                    <img class="fal" src="src/icon/home.svg" alt="home">
                 </div>
-                <div class="search">
-                    <img src="src/icon/search.svg" alt="search">
+                <div class="search fl fl-jc-c fl-ai-c">
+                    <img class="fal" src="src/icon/search.svg" alt="search">
                 </div>
-                <div class="story">
-                    <img src="src/icon/story.svg" alt="story">
+                <div class="story fl fl-jc-c fl-ai-c">
+                    <img class="fal" src="src/icon/story.svg" alt="story">
                 </div>
-                <div class="activity">
-                    <img src="src/icon/like.png" alt="activity">
+                <div class="activity fl fl-jc-c fl-ai-c">
+                    <img class="fal" src="src/icon/like.png" alt="activity">
                 </div>
-                <div class="profile">
-                    <img src="src/" alt="profile">
+                <div class="profile fl fl-jc-c fl-ai-c">
+                    <img class="fal fa-2x" src="src/img/profile.png" alt="profile">
                 </div>
             </div>
         </footer>
