--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
                     <img class="fal" src="src/icon/like.png" alt="activity">
                 </div>
                 <div class="profile fl fl-jc-c fl-ai-c">
-                    <img class="fal fa-2x" src="src/img/profile.png" alt="profile">
+                    <img class="fal fa-2x" src="src/icon/profile.png" alt="profile">
                 </div>
             </div>
         </footer>
