--- a/main.html
+++ b/main.html
@@ -25,9 +25,12 @@
             </div>
         </header>
 
+        <div class="stories avatar">
+            
+        </div>
 
         <footer class="footer">
-            <div class="bottom_menu tabs fl fl-jc-sa fl-ai-c">
+            <div class="bottom_menu fl fl-jc-sa fl-ai-c">
                 <div class="home fl fl-jc-c fl-ai-c">
                     <img class="fal" src="src/icon/home.svg" alt="home">
                 </div>
