--- a/main.html
+++ b/main.html
@@ -25,8 +25,10 @@
             </div>
         </header>
 
-        <div class="stories avatar">
-            
+        <div class="stori">
+            <img src="/src/icon/profile.png" alt="img" class="avatar stories">
+            <img src="/src/icon/profile.png" alt="img" class="avatar stories">
+            <img src="/src/icon/profile.png" alt="img" class="avatar stories">
         </div>
 
         <footer class="footer">
