--- a/main.html
+++ b/main.html
@@ -26,9 +26,9 @@
         </header>
 
         <div class="stori">
-            <img src="/src/icon/profile.png" alt="img" class="avatar stories">
-            <img src="/src/icon/profile.png" alt="img" class="avatar stories">
-            <img src="/src/icon/profile.png" alt="img" class="avatar stories">
+            <img src="https://i.pravatar.cc?img=68" alt="img" class="avatar stories">
+            <img src="https://i.pravatar.cc?img=47" alt="img" class="avatar stories">
+            <img src="https://i.pravatar.cc?img=67" alt="img" class="avatar stories">
         </div>
 
         <footer class="footer">
