--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+            <script type='text/javascript' src='js/jquery.js'></script>
             <link rel="icon" href="src/icon/instagram.ico" type="image/x-icon">
             <title>Instagram</title>
         </head>
@@ -31,6 +33,8 @@
             <img src="https://i.pravatar.cc?img=67" alt="img" class="avatar stories">
         </div>
 
+        <a class="scrollToTop" onclick="jQuery('html,body').animate({scrollTop:0}, 'slow');"><span class="fa fa-chevron-up"></span></a>
+        
         <footer class="footer">
             <div class="bottom_menu fl fl-jc-sa fl-ai-c">
                 <div class="home fl fl-jc-c fl-ai-c">
