--- a/main.html
+++ b/main.html
@@ -27,11 +27,15 @@
             </div>
         </header>
 
-        <div class="stori">
-            <img src="https://i.pravatar.cc?img=68" alt="img" class="avatar stories">
-            <img src="https://i.pravatar.cc?img=47" alt="img" class="avatar stories">
-            <img src="https://i.pravatar.cc?img=67" alt="img" class="avatar stories">
-        </div>
+        <main>
+            <div class="stori">
+                <img src="https://i.pravatar.cc?img=68" alt="img" class="avatar stories">
+                <img src="https://i.pravatar.cc?img=47" alt="img" class="avatar stories">
+                <img src="https://i.pravatar.cc?img=67" alt="img" class="avatar stories">
+            </div>
+
+
+        </main>
 
         <a class="scrollToTop" onclick="jQuery('html,body').animate({scrollTop:0}, 'slow');"><span class="fa fa-chevron-up"></span></a>
         
