--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
                     <img src="src/icon/logo.svg" alt="logo">
                 </div>
                 <div class="new_post">
-                    <img src="src/icon/post.png" alt="post">
+                    <img src="src/icon/post.svg" alt="post">
                 </div>
                 <div class="message">
-                    <img src="src/icon/message.png" alt="message">
+                    <img src="src/icon/message.svg" alt="message">
                 </div>  
             </div>
         </header>
@@ -49,7 +49,7 @@
                     <img class="fal" src="src/icon/story.svg" alt="story">
                 </div>
                 <div class="activity fl fl-jc-c fl-ai-c">
-                    <img class="fal" src="src/icon/like.png" alt="activity">
+                    <img class="fal" src="src/icon/like.svg" alt="activity">
                 </div>
                 <div class="profile fl fl-jc-c fl-ai-c">
                     <img class="fal fa-2x" src="src/icon/profile.png" alt="profile">
