--- a/main.html
+++ b/main.html
@@ -9,10 +9,9 @@
             <link rel="icon" href="src/icon/instagram.ico" type="image/x-icon">
             <title>Instagram</title>
         </head>
-    <body>
 
-
-        <header class="header">
+        <body>
+            <header class="header">
             <div class="upper_menu">
                 <div class="logo">
                     <img src="src/icon/logo.svg" alt="logo">
@@ -24,20 +23,47 @@
                     <img src="src/icon/message.svg" alt="message">
                 </div>  
             </div>
-        </header>
+            </header>
 
-        <main>
-            <div class="stori">
-                <img src="https://i.pravatar.cc?img=68" alt="img" class="avatar stories">
-                <img src="https://i.pravatar.cc?img=47" alt="img" class="avatar stories">
-                <img src="https://i.pravatar.cc?img=67" alt="img" class="avatar stories">
-            </div>
+            <main>
+                <div class="stori">
+                    <img src="https://i.pravatar.cc?img=68" alt="img" class="avatar stories">
+                    <img src="https://i.pravatar.cc?img=47" alt="img" class="avatar stories">
+                    <img src="https://i.pravatar.cc?img=67" alt="img" class="avatar stories">
+                </div>
 
-
-        </main>
+                <div class="container">
+                    <div class="publs fl fl-wrap">
+                        <div class="publ__item fl-col fl-ai-c">
+                            <div class="publ__header fl fl-jc-c fl-ai-c">
+                                <img class="avatars" style="flex-grow: 1;" src="src/icon/profile.png" alt="profile">
+                                <div class="info fl-col">
+                                    <div class="login">Ammatias</div>
+                                    <div class="place">Ural street</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="publ__photo">
+                            <img src="https://i.pravatar.cc?img=50" alt="Photo">
+                        </div>
+                        <div class="wrapper">
+                            <div class="publ__actions fl fl-jc-sb">
+                                <img src="src/icon/like.svg" class="fal fa-2x"></img>
+                                <img src="src/icon/comment.svg" class="fal fa-2x"></img>
+                            </div>
+                            <div class="publ__like">228 отметок нравиться</div>
+                                <a href="#" class="login"></a>
+                                <span class="description">Описание</span>
+                            <span class="time">34 минуты назад</span>
+                        </div>
+                        <div class="publ__footer"></div>
+                    </div>
+                </div>
+            
+            </main>
 
         
-        <footer class="footer">
+            <footer class="footer">
             <div class="bottom_menu fl fl-jc-sa fl-ai-c">
                 <div class="home fl fl-jc-c fl-ai-c">
                     <img class="fal" src="src/icon/home.svg" alt="home">
@@ -55,8 +81,8 @@
                     <img class="fal fa-2x" src="src/icon/profile.png" alt="profile">
                 </div>
             </div>
-        </footer>
+            </footer>
 
 
-    </body>
-</html>
+        </body>
+    </html>
