--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
                         <div class="wrapper">
                             <div class="publ__actions fl fl-jc-sb">
                                 <img src="src/icon/like.svg" class="fal fa-2x"></img>
-                                <img src="src/icon/comment.svg" class="fal fa-2x"></img>
+                                <img src="src/icon/comment.svg" class="fal wh fa-2x"></img>
                             </div>
                             <div class="publ__like">228 отметок нравиться</div>
                                 <a href="#" class="login"></a>
